<resources>
    <string name="app_name">Mad Level4 Example2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_instruction">Instructions: select rock, paper of scissors to play</string>
    <string name="txt_your_statistics">Your all-time statistics</string>
    <string name="txt_you_win">You win!</string>
    <string name="txt_vs">V.S.</string>
    <string name="txt_win">Win: %d</string>
    <string name="txt_draw">Draw: %d</string>
    <string name="txt_loses">Lose: %d</string>
    <string name="txt_computer">Computer</string>
    <string name="txt_you">You</string>
    <string name="title_win">You win!</string>
    <string name="title_lose">You lose!</string>
    <string name="title_draw">Draw!</string>
    <string name="title_fragment_history">Your Game History</string>

    <string name="todo">TODO</string>
    <string name="header_icon_btn">header_icon_btn</string>
</resources>